fixed spacing

--- a/style.css
+++ b/style.css
@@ -234,8 +234,8 @@ header {
 #backsplash {
   position: absolute;
   right: 0;
-  bottom: 415px;
   width: 80%;
+  top: 495px;
   height: 60px;
   background-color: var(--accent-color);
   z-index: -9999;
@@ -256,7 +256,7 @@ header {
 #about-colorblock {
   position: absolute;
   left:0;
-  bottom: -85px;
+  bottom: -58px;
   width: 80%;
   height: 60px;
   background-color: var(--blue-accent-color);
@@ -427,8 +427,7 @@ hr {
 #sort-backsplash {
   position: relative;
   display: block;
-  top: 82px;
-  left: 435px;
+  top: 42px;
   width: 500px;
   height: 10px;
   border-radius: 1rem;
@@ -441,18 +440,25 @@ hr {
   margin: auto;
 }
 
+fieldset {
+  width: 400px;
+  margin: 20px auto;
+  height: 150px;
+}
+
 label {
   font-size: 20px;
 }
 
 input[type='radio'] {
-  position: absolute;
+  position: relative;
   opacity: 0;
 }
 
 input[type='radio'] + label {
   position: relative;
   display: block;
+  top: -50px;
   padding: 10px;
   cursor: pointer;
 }
@@ -470,6 +476,7 @@ input[type='radio'] + label::before {
 }
 
 input[type='radio']:checked + label::before {
+  top: -7px;
   width: 50px;
   height: 50px;
   background-color: var(--accent-color);
